tests/parser/bad/type_t-cid-lparen-tid-with.scilla
scilla_version 0

(* unclosed brackets *)
library Something

let f = fun( x : Option (Bool
